fix collapsed sidebar override

--- a/FCMS/static/darker-lte.css
+++ b/FCMS/static/darker-lte.css
@@ -13,7 +13,7 @@ body {
   bottom: 0;
   left: 0;
   position: sticky;
-  margin-left: 0 !important;
+  margin-left: 0;
   z-index: 1039;
 }
 
@@ -23,6 +23,12 @@ body {
 
 .sidebar-open .main-sidebar {
   z-index: 1040;
+}
+
+@media (min-width: 992px) {
+  .sidebar-mini.sidebar-collapse .main-footer {
+    margin-left: 0 !important;
+  }
 }
 
 .login-logo{
